k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-monapplicationb-monapplicationb-backend
