k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-monapplicationb-monapplicationb-backend-deployment
  namespace: prod-monapplicationb-monapplicationb-backend
  labels:
    app: prod-monapplicationb-monapplicationb-backend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: prod-monapplicationb-monapplicationb-backend
  template:
    metadata:
      labels:
        app: prod-monapplicationb-monapplicationb-backend
    spec:
      containers:
        - name: prod-monapplicationb-monapplicationb-backend
          image: corentin35/monapplicationb-monapplicationb-backend:${TAG_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
          resources:
            requests:
              cpu: '300m'
              memory: '400Mi'
            limits:
              cpu: '600m'
              memory: '800Mi'
      imagePullSecrets:
        - name: regcred
